tests/baselines/reference/parserErrorRecoveryArrayLiteralExpression1.errors.txt
tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrayLiteralExpressions/parserErrorRecoveryArrayLiteralExpression1.ts(2,1): error TS1005: ',' expected.


==== tests/cases/conformance/parser/ecmascript5/ErrorRecovery/ArrayLiteralExpressions/parserErrorRecoveryArrayLiteralExpression1.ts (1 errors) ====
    var v = [1, 2, 3
    4, 5, 6, 7];
    ~
!!! error TS1005: ',' expected.